<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="true"
    android:orientation="vertical"
    android:paddingTop="16dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_goTo_HowToUnlockTheScreenActivity"
        style="@style/CustomMainButton"
        android:text="@string/goTo_HowToUnlockTheScreenActivity" />

    <Button
        android:id="@+id/button_goTo_HowToAnswerTheIncomingCall"
        style="@style/CustomMainButton"
        android:text="@string/goTo_HowToAnswerTheIncomingCallActivity" />

    <Button
        android:id="@+id/button_goTo_HowToRunAnAppActivity"
        style="@style/CustomMainButton"
        android:text="@string/goTo_HowToRunAnApp" />

    <Button
        android:id="@+id/button_goTo_HowToManipulateTheCursorActivity"
        style="@style/CustomMainButton"
        android:text="@string/goTo_HowToManipulateTheCursor" />

    <Button
        android:id="@+id/button_goTo_HowToScrollTheScreenActivity"
        style="@style/CustomMainButton"
        android:text="@string/goTo_HowToScrollTheScreenActivity" />

</LinearLayout>
