<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.syenbhark.thetutorialforandroidbeginners.F02HowToAnswerTheIncomingCallActivity">

        <TextView
            style="@style/TextViewTemplate"
            android:text="@string/F02HowToAnswerTheIncomingCallActivity_textView_subtitle"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            style="@style/TextViewTemplate"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/F02HowToAnswerTheIncomingCallActivity_textView_contents" />


        <Button
            android:id="@+id/button_to_see_unlock_video"
            style="@style/CustomMainButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:onClick="setOnClick_watchTheSimulationOfIncomingCall"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/F01HowToUnlockTheScreenActivity_button_startVideo"
            android:textSize="15sp" />

        <CheckBox
            android:layout_gravity="center_horizontal"
            android:id="@+id/checkBox_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/F02HowToAnswerTheIncomingCallActivity_checkBox"/>

        <Button
            android:id="@+id/button_to_return"
            style="@style/CustomMainButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:onClick="setOnClick_backToMain"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/F02HowToAnswerTheIncomingCallActivity_button_confirm"
            android:textSize="15sp" />
    </LinearLayout>
</ScrollView>