<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.syenbhark.thetutorialforandroidbeginners.F04HowToManipulateTheCursorActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_HowToManipulateTheCursorSubtitle"
            style="@style/TextViewTemplate"
            android:text="@string/F04HowToManipulateTheCursor_textView_subtitle01"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText_To_Simulate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:capitalize="words"
            android:hint="@string/F04HowToManipulateTheCursor_editText_hint"
            android:imeOptions="actionDone"
            android:singleLine="true" />

        <TextView
            android:id="@+id/textView_cursor_description"
            style="@style/TextViewTemplate"
            android:layout_marginBottom="10dp"
            android:text="@string/F04HowToManipulateTheCursor_textView_contents01" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                style="@style/TextViewTemplate"
                android:layout_width="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/F04HowToManipulateTheCursor_textView_hint01" />

            <ImageView
                android:id="@+id/imageView_cursor_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:background="@mipmap/done" />

            <TextView
                android:id="@+id/textView_cursor_hint"
                style="@style/TextViewTemplate"
                android:layout_width="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/F04HowToManipulateTheCursor_textView_hint_contents01" />

        </LinearLayout>

        <Button
            android:id="@+id/button_to_see_cursor_video"
            style="@style/CustomMainButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:onClick="setOnClick"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/F04HowToManipulateTheCursor_button_startVideo"
            android:textSize="15dp"
            android:visibility="invisible" />
    </LinearLayout>
</ScrollView>